--- a/4c1/style/style2.css
+++ b/4c1/style/style2.css
@@ -2,11 +2,16 @@ p {
 	color: blue;
 	font-weight: bold;
 }
-div, ul{
-    font-size: 20px;
-    color: red;
+div,
+ul {
+	font-size: 20px;
+	color: red;
 }
-li em{
-    font-size: 15px;
-    color: yellow;
+li em {
+	font-size: 15px;
+	color: yellow;
+}
+.pierwszy {
+	background-color: greenyellow;
+	color: darkgreen;
 }
