--- a/4c1/nowe zadania/style2/tabela.css
+++ b/4c1/nowe zadania/style2/tabela.css
@@ -1,10 +1,42 @@
-*{
-    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+* {
+	font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
 }
-table{
-    width: 100%;
+table {
+	width: 100%;
 }
-h1{
-    margin-bottom: 0px;
-    text-transform: uppercase;
+h1 {
+	margin-bottom: 0px;
+	text-transform: uppercase;
+	color: black;
+    text-align: center;
+    text-decoration:  underline;
+}
+p {
+	color: black;
+	text-align: center;
+	margin: 0%;
+}
+td,
+th {
+	padding: 7px 10px 10px 10px;
+}
+th {
+	text-transform: uppercase;
+	letter-spacing: 0.2em;
+	border-top: 1px solid #999;
+	border-bottom: 2px solid #111111;
+	font-size: 90%;
+}
+.font {
+	font-weight: 300px;
+	font-family: 'Sacramento', serif;
+}
+.cour{
+    font-family: 'Courier New', Courier, monospace;
+}
+tr:hover{
+    background-color: deeppink;
+}
+div{
+    background-color: #eeeeee ;
 }
