--- a/4c1/nowe zadania/style2/zadanie12.css
+++ b/4c1/nowe zadania/style2/zadanie12.css
@@ -51,5 +51,18 @@ p {
     color: darkred;
     font-size: 120%;
     font-weight: bold;
-    
+
+}
+a{
+    position: absolute;
+    bottom: 0px;
+    right: 0px;
+    color: gray;
+    background-color: grey;
+    color: white;
+    text-decoration: none;
+    width: 200px;
+	height: 20px;
+	padding: 20px;
+    text-align: center;
 }
